-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.10.0-beta1
-
None
-
ffa1f9f870024be8fcc26f35a80924a3711dd615 (qt-creator/qt-creator/master)
Tried to run application. Doesn't happen always. Here's a "process sample" while it hangs:
Call graph:
2365 Thread_4950052 DispatchQueue_1: com.apple.main-thread (serial)
+ 2365 start (in libdyld.dylib) + 1 [0x7fff5b72a3d5]
+ 2365 main (in Qt Creator) + 13807 [0x10bb0e6af] main.cpp:631
+ 2365 QCoreApplication::exec() (in QtCore) + 130 [0x10d20b452]
+ 2365 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (in QtCore) + 431 [0x10d20650f]
+ 2365 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (in libqcocoa.dylib) + 2955 [0x10f811ccb]
+ 2365 -[NSApplication run] (in AppKit) + 699 [0x7fff2c930eb0]
+ 2365 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] (in AppKit) + 1361 [0x7fff2c936d93]
+ 2365 _DPSNextEvent (in AppKit) + 965 [0x7fff2c937ffb]
+ 2365 _BlockUntilNextEventMatchingListInModeWithFilter (in HIToolbox) + 64 [0x7fff2e59d4a6]
+ 2365 ReceiveNextEventCommon (in HIToolbox) + 603 [0x7fff2e59d715]
+ 2365 RunCurrentEventLoopInMode (in HIToolbox) + 292 [0x7fff2e59d9db]
+ 2365 CFRunLoopRunSpecific (in CoreFoundation) + 455 [0x7fff2f2b0e0e]
+ 2365 __CFRunLoopRun (in CoreFoundation) + 1189 [0x7fff2f2b1505]
+ 2365 __CFRunLoopDoSources0 (in CoreFoundation) + 283 [0x7fff2f2b1f93]
+ 2365 __CFRunLoopDoSource0 (in CoreFoundation) + 108 [0x7fff2f2ce589]
+ 2365 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ (in CoreFoundation) + 17 [0x7fff2f2ce5e3]
+ 2365 QCocoaEventDispatcherPrivate::activateTimersSourceCallback(void*) (in libqcocoa.dylib) + 18 [0x10f810da2]
+ 2365 QTimerInfoList::activateTimers() (in QtCore) + 991 [0x10d26434f]
+ 2365 QCoreApplication::notifyInternal2(QObject*, QEvent*) (in QtCore) + 212 [0x10d20ae44]
+ 2365 QApplication::notify(QObject*, QEvent*) (in QtWidgets) + 594 [0x10c3e5b02]
+ 2365 QApplicationPrivate::notify_helper(QObject*, QEvent*) (in QtWidgets) + 269 [0x10c3e46fd]
+ 2365 QObject::event(QEvent*) (in QtCore) + 102 [0x10d2344c6]
+ 2365 QSingleShotTimer::timerEvent(QTimerEvent*) (in QtCore) + 173 [0x10d24409d]
+ 2365 QtPrivate::QSlotObject<void (ProjectExplorer::RunWorker::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (in libProjectExplorer_debug.dylib) + 166 [0x113fc7756] qobjectdefs_impl.h:414
+ 2365 void QtPrivate::FunctionPointer<void (ProjectExplorer::RunWorker::*)()>::call<QtPrivate::List<>, void>(void (ProjectExplorer::RunWorker::*)(), ProjectExplorer::RunWorker*, void**) (in libProjectExplorer_debug.dylib) + 99 [0x113fc7843] qobjectdefs_impl.h:185
+ 2365 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ProjectExplorer::RunWorker::*)()>::call(void (ProjectExplorer::RunWorker::*)(), ProjectExplorer::RunWorker*, void**) (in libProjectExplorer_debug.dylib) + 126 [0x113fc78ee] qobjectdefs_impl.h:152
+ 2365 ProjectExplorer::RunWorker::initiateStart() (in libProjectExplorer_debug.dylib) + 177 [0x113fb9be1] runcontrol.cpp:1339
+ 2365 ProjectExplorer::SimpleTargetRunner::start() (in libProjectExplorer_debug.dylib) + 474 [0x113fbddba] runcontrol.cpp:1109
+ 2365 ProjectExplorer::RunWorker::appendMessage(QString const&, Utils::OutputFormat, bool) (in libProjectExplorer_debug.dylib) + 252 [0x113fbe79c] runcontrol.cpp:1434
+ 2365 ProjectExplorer::RunControl::appendMessage(QString const&, Utils::OutputFormat) (in libProjectExplorer_debug.dylib) + 84 [0x1141f60e4] moc_runcontrol.cpp:318
+ 2365 QMetaObject::activate(QObject*, int, int, void**) (in QtCore) + 2219 [0x10d23bd0b]
+ 2365 QtPrivate::QFunctorSlotObject<ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow(ProjectExplorer::RunControl*)::$_4, 2, QtPrivate::List<QString const&, Utils::OutputFormat>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (in libProjectExplorer_debug.dylib) + 157 [0x1140c227d] qobjectdefs_impl.h:439
+ 2365 void QtPrivate::Functor<ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow(ProjectExplorer::RunControl*)::$_4, 2>::call<QtPrivate::List<QString const&, Utils::OutputFormat>, void>(ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow(ProjectExplorer::RunControl*)::$_4&, void*, void**) (in libProjectExplorer_debug.dylib) + 33 [0x1140c22d1] qobjectdefs_impl.h:256
+ 2365 QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<QString const&, Utils::OutputFormat>, void, ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow(ProjectExplorer::RunControl*)::$_4>::call(ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow(ProjectExplorer::RunControl*)::$_4&, void**) (in libProjectExplorer_debug.dylib) + 43 [0x1140c232b] qobjectdefs_impl.h:146
+ 2365 ProjectExplorer::Internal::AppOutputPane::createNewOutputWindow(ProjectExplorer::RunControl*)::$_4::operator()(QString const&, Utils::OutputFormat) const (in libProjectExplorer_debug.dylib) + 42 [0x1140c237a] appoutputpane.cpp:461
+ 2365 ProjectExplorer::Internal::AppOutputPane::appendMessage(ProjectExplorer::RunControl*, QString const&, Utils::OutputFormat) (in libProjectExplorer_debug.dylib) + 330 [0x1140bcfaa] appoutputpane.cpp:567
+ 2365 Core::OutputWindow::appendMessage(QString const&, Utils::OutputFormat) (in libCore_debug.dylib) + 981 [0x1121f8d45] outputwindow.cpp:439
+ 2365 QtSupport::QtOutputFormatter::appendMessage(QString const&, Utils::OutputFormat) (in libQtSupport_debug.dylib) + 93 [0x11644321d] qtoutputformatter.cpp:135
+ 2365 QtSupport::QtOutputFormatter::appendMessage(QString const&, QTextCharFormat const&) (in libQtSupport_debug.dylib) + 342 [0x116443d36] qtoutputformatter.cpp:191
+ 2365 Utils::OutputFormatter::contentChanged() (in libUtils_debug.4.9.82.dylib) + 34 [0x10be7de02] moc_outputformatter.cpp:131
+ 2365 QMetaObject::activate(QObject*, int, int, void**) (in QtCore) + 2219 [0x10d23bd0b]
+ 2365 QtPrivate::QSlotObject<void (Core::OutputWindow::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (in libCore_debug.dylib) + 166 [0x1121fae36] qobjectdefs_impl.h:414
+ 2365 void QtPrivate::FunctionPointer<void (Core::OutputWindow::*)()>::call<QtPrivate::List<>, void>(void (Core::OutputWindow::*)(), Core::OutputWindow*, void**) (in libCore_debug.dylib) + 99 [0x1121faf23] qobjectdefs_impl.h:185
+ 2365 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Core::OutputWindow::*)()>::call(void (Core::OutputWindow::*)(), Core::OutputWindow*, void**) (in libCore_debug.dylib) + 126 [0x1121fafce] qobjectdefs_impl.h:152
+ 689 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1786 [0x1121f7b7a] outputwindow.cpp:351
+ ! 689 QTextBlock::next() const (in QtGui) + 112,92,... [0x10caa0650,0x10caa063c,...]
+ 380 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1650,1675,... [0x1121f7af2,0x1121f7b0b,...] outputwindow.cpp:352
+ 283 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1396 [0x1121f79f4] outputwindow.cpp:351
+ ! 273 QTextBlock::operator!=(QTextBlock const&) const (in libCore_debug.dylib) + 71,45,... [0x1121f8607,0x1121f85ed,...] qtextobject.h:213
+ ! 10 QTextBlock::operator!=(QTextBlock const&) const (in libCore_debug.dylib) + 63 [0x1121f85ff] qtextobject.h:0
+ 235 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1802 [0x1121f7b8a] outputwindow.cpp:351
+ ! 235 QTextBlock::operator=(QTextBlock const&) (in libCore_debug.dylib) + 30,26,... [0x1121f832e,0x1121f832a,...] qtextobject.h:208
+ 211 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1391,1770,... [0x1121f79ef,0x1121f7b6a,...] outputwindow.cpp:351
+ 175 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1670 [0x1121f7b06] outputwindow.cpp:352
+ ! 175 QTextBlock::setVisible(bool) (in QtGui) + 56,27,... [0x10caa0218,0x10caa01fb,...]
+ 154 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1446 [0x1121f7a26] outputwindow.cpp:352
+ ! 154 QString::isEmpty() const (in libCore_debug.dylib) + 22,8,... [0x1121a16d6,0x1121a16c8,...] qstring.h:942
+ 116 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1377 [0x1121f79e1] outputwindow.cpp:351
+ ! 116 QTextDocument::end() const (in QtGui) + 0,4,... [0x10caa60a0,0x10caa60a4,...]
+ 67 Core::OutputWindow::filterNewContent() (in libCore_debug.dylib) + 1477,1469,... [0x1121f7a45,0x1121f7a3d,...] outputwindow.cpp:353
+ 34 DYLD-STUB$$QTextBlock::next() const (in libCore_debug.dylib) + 0 [0x1124cb024]
+ 20 DYLD-STUB$$QTextBlock::setVisible(bool) (in libCore_debug.dylib) + 0 [0x1124c9116]
+ 1 DYLD-STUB$$QTextDocument::end() const (in libCore_debug.dylib) + 0 [0x1124cb294]
I didn't actually type anything in the filter input field and it still shows me the placeholder text "Filter"
| For Gerrit Dashboard: QTCREATORBUG-22379 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 261003,2 | App output filter: Try harder to detect an invalid text block | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |