App output filter: Try harder to detect an invalid text block

Calling QTextBlock::isValid() is not enough to ensure that the block is
still part of the document.

Fixes: QTCREATORBUG-22379
Change-Id: I3016e763b67f3983bdb9077c80ae3de8d46e4080
Reviewed-by: Eike Ziller <eike.ziller@qt.io>